--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -31,7 +31,7 @@ jobs:
       - name: Install pypi dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install aiohttp requests jwt coverage pyyaml pydantic rich inquirer
+          python -m pip install aiohttp requests jwt coverage pyyaml pydantic==1.* rich inquirer
 
       - name: Coverage testing
         run: |
@@ -84,7 +84,7 @@ jobs:
         run: |
           python -c "import sys; print('Python version:', sys.version)"
           python -m pip install --upgrade pip
-          python -m pip install pydantic inquirer rich pyyaml
+          python -m pip install pydantic==1.* inquirer rich pyyaml
 
       - name: Client build
         run: |
