--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -31,7 +31,7 @@ jobs:
       - name: Install pypi dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install aiohttp requests jwt coverage pyyaml pydantic==1.* rich inquirer
+          python -m pip install aiohttp requests jwt coverage "pyyaml>=6.0" "pydantic>=1.10.7" "rich>=13.3.5" "inquirer>=3.1"
 
       - name: Coverage testing
         run: |
@@ -84,7 +84,7 @@ jobs:
         run: |
           python -c "import sys; print('Python version:', sys.version)"
           python -m pip install --upgrade pip
-          python -m pip install pydantic==1.* inquirer rich pyyaml
+          python -m pip install "pydantic>=1.10.7" "inquirer>=3.1" "rich>=13.3.5" "pyyaml>=6.0"
 
       - name: Client build
         run: |
